@@ -1,5 +1,9 @@
 === 2.4.1 / ??
 
+* N Minor Enhancements
+  * Added :attr:, :attr_reader:, :attr_writer:, :attr_accessor: directives.
+    See RDoc::Parser::Ruby for details.
+
 * N Bug Fixes
   * Don't complain when exiting normally.  Bug by Matt Neuburg.
   * Restore --inline-source that warns.
